--- a/src/main/webapp/send-form-as-post.html
+++ b/src/main/webapp/send-form-as-post.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <form method="post" action="/homework/infoShareAcademy">
-    String1:<input type="text" name="id"/><br/>
-    String2:<input type="text" name="id"/><br/>
-    Table part1:<input type="text" name="tree[table][field1]"/><br/>
-    Table part2:<input type="text" name="tree[table][field2]"/><br/>
+    Param1:<input type="text" name="param1"/><br/>
+    Param2:<input type="text" name="param2"/><br/>
+    Param3 part1:<input type="text" name="param3"/><br/>
+    Param3 part2:<input type="text" name="param3"/><br/>
     <input type="submit" name="submit" value="submit"/><br/>
 
 </form>
